# sysdoc

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  audit.toml  deny.toml  sysdoc.toml.example
.github/workflows/: audit.yml  ci.yml
docs/: sysdoc-toml-schema.md  template-schema.md
examples/complete-sdd/: sysdoc.toml
scripts/: validate-docx.ps1  validate-docx.sh
sysdoc/: Cargo.toml
sysdoc/src/: cli.rs  document_config.rs  document_section.rs  docx_rs_exporter.rs  docx_rust_exporter.rs  docx_template_exporter.rs  html_exporter.rs  main.rs  markdown_exporter.rs  model.rs  pdf_exporter.rs  pipeline.rs  source_model.rs  svg_converter.rs  template_config.rs  templates.rs  typst_exporter.rs  unified_document.rs  walker.rs
sysdoc/src/sandbox/: linux.rs
sysdoc/src/source_model/: blocks.rs  image.rs  markdown_source.rs  parser.rs  section_metadata.rs  validation.rs
sysdoc/src/templates/: idd-standard-v1.toml  sdd-standard-v1.toml  srs-standard-v1.toml  ssdd-standard-v1.toml  sss-standard-v1.toml  std-standard-v1.toml  stp-standard-v1.toml  str-standard-v1.toml  tr-standard-v1.toml
sysdoc/tests/: integration_test.rs
tests/fixtures/: README.md
tests/fixtures/test-bold/: sysdoc.toml
tests/fixtures/test-csv-table/: sysdoc.toml
tests/fixtures/test-inline-table/: sysdoc.toml
tests/fixtures/test-italics/: sysdoc.toml
tests/fixtures/test-lists/: sysdoc.toml
tests/fixtures/test-normal-text/: sysdoc.toml
tests/fixtures/test-png-image/: sysdoc.toml
tests/fixtures/test-strikethrough/: sysdoc.toml
tests/fixtures/test-svg-image/: sysdoc.toml
(+9 files in other folders)
